# storm_automation_framework

./: README.md  StormTestCase.py  StormTestLoader.py  TestRunner.py  event_handler.py  main.py  pyproject.toml  run_test.py  test_runner_utils.py
POCs/: __init__.py
POCs/message_broker_based_testing/: ParallelProcessing.py  StormTestCase.py  TestRunner.py  event_handler.py  main.py  test_runner_utils.py
cloud/gcp/: big_query.py  big_table.py  google_storage.py
cloud/gcp/BigQuery/: BigQueryHelper.py
cloud/gcp/airflow/: airflow_test.py
kafka/: kafka_client.py
storm_test/: DataManager.py  storm.py  storm_bdd.py  storm_reporters.py  storm_test_data.py
test_management_systems/Qase/: QaseAPI.py  qase_submit_bulk.py
test_suites/: __init__.py
test_suites/sample_tests/: TestValidateMath.py  __init__.py
tests/: bdd_test.py  test.py
